--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="mystyle.css">
 <title>ПЕС ТО ПЕС</title>
 </head>
 <body>
 
 <h1>Жив був пес він жрав довго майонез</h1>
 <p>Пес був трохі дурнуватий та обожнював жрати вату та папір бовін був сильний поводир.</p>
-<img src="pes.jpeg">
-<video width="480" src="40.mp4" controls></video>
-<h2>ПЕС жив довго і щаслово і у нього росла грива</h2>
+<h1><video width="900" src="40.mp4" controls></video></h1>
+<h2>ПЕС жив довго і щаслово і у нього росла грива
+    <img src="pes.jpeg">
+</h2>
 <h3>у пса був друг і звали його хірург</h3>
-<img src="pes2-2.jpeg">
+<h3><img src="pes2-2.jpeg"></h3>
 <a href="index2.html">друга сторінка</a>
 </body>
 </html>
