--- a/index2.html
+++ b/index2.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="mystyle2.css">
 <title>ПЕС ТО ПЕС 2</title>
 </head>
 <body>
-    <img src="pes2.jpeg">
+
     <h1>пес обожнював жрати гавно бо воно було його</h1>
-    <h2>всі думки про нього</h2>
-    <img src="pesя.jpeg">
+    <h1>
+        <img src="pes2.jpeg">
+    </h1>
+    <h2>всі думки про нього ,купуйте собаче гівно не дорого</h2>
+    <h2><img src="pesя.jpeg"></h2>
     <a href="index.html">перша сторінка</a>
      <a href="index3.html">третя сторінка</a> 
 </body>
