--- a/index3.html
+++ b/index3.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="mystyle3.css">
 <title>ПЕС ТО ПЕС 3</title>
 </head>
 <body>
-    <img src="pes3.jpeg">
+   <h1><img src="pes3.jpeg"></h1>
     <h1>пса історія проста тра та та</h1>
-    <img src="pes3-2.jpeg">
+
     <p>він був патлатий і махнатий та чудернацько дурноватий</p>
     <a href="index2.html">друга сторінка</a>
      <a href="index4.html">четверта сторінка</a>
