--- a/index4.html
+++ b/index4.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="mystyle.css">
 <title>ПЕС ТО ПЕС 4</title>
 </head>
 <body>
-    <img src="pes4.jpeg">
+    
     <h1>пес просив не пиздеть про результат бо зазуне в одне місце автомат </h1>
-    <img src="pes4-2.jpeg">
+    <h1><img src="pes4.jpeg"></h1>
     <h2>пес питає як вам сайт?</h2>
-    <img src="pes4-3.jpeg">
+    <h2><img src="pes4-2.jpeg"></h2>
+    <h3>просто пес вчіть CSS</h3>
+    <h3><img src="pes4-3.jpeg"></h3>
     <a href="index3.html">третя сторінка</a>
      <a href="index.html">перша сторінка</a>
 </body>
